trunk/Archive2/f6/c7bfdf8dfc9cca/main.cpp
#include <vector>

int main()
{
    std::vector<int> vec;
    return vec.begin() == vec.rbegin();
}